# humanoid-edge-ai-human-tracking-robot

./: README.md  requirements.txt
esp32/: README.md  esp32_motor_controller.ino
ros2_ws/: README.md
ros2_ws/src/humanoid_control/: package.xml  setup.py
ros2_ws/src/humanoid_control/config/: params.yaml
ros2_ws/src/humanoid_control/humanoid_control/: serial_bridge.py  tracker_node.py  vision_node.py
ros2_ws/src/humanoid_control/launch/: humanoid.launch.py
ros2_ws/src/humanoid_control/models/: README.md
