<?xml version="1.0"?>
<package format="3">

  <name>humanoid_control</name>
  <version>0.0.1</version>

  <description>
    Humanoid Robot Using Edge AI for Real-Time Human Detection and Tracking
  </description>

  <maintainer email="charan@example.com">
    Charan
  </maintainer>

  <license>MIT</license>

  <!-- Build Tool -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Dependencies -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <!-- Python Dependencies -->
  <exec_depend>python3-opencv</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

</package>
